@@ -1,9 +1,6 @@
-import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.Before;
-
-import java.util.ArrayList;
 
 import static junit.framework.Assert.assertEquals;
 
@@ -15,50 +12,32 @@ public class TestsMove {
     @Before
     public void initialization() {
         field = new Field();
-        snake = new Snake(new Point(1,1), 5, Direction.RIGHT);
-    }
-
-    @Test
-    public void moveToOppositeTest(){
-        Move.move(field, snake, Direction.LEFT);
-        assertEquals(new Point(2, 1), snake.getSnakeTail().position);
-        assertEquals(new Point(6, 1), snake.getSnakeHead().position);
-    }
-
-    @Test
-    public void moveToFruitTest() {
-        field.add(new Point(6, 1), new Fruit());
-        Move.move(field, snake, Direction.RIGHT);
-        Move.move(field, snake, Direction.RIGHT);
-        assertEquals(6, snake.getSnakeSize());
-        assertEquals(SnakePart.class, snake.objectSearch(new Point(6,1)).getClass());
-        Assert.assertFalse(field.contains(new Point(6,1)));
+        snake = new Snake();
     }
 
     @Test
     public void moveToWallTest() {
-        field.add(snake.getSnakeHead().position.add(Direction.RIGHT.getShift()), new Wall());
-        Move.move(field, snake, Direction.RIGHT);
+        snake.setCurrentDirection(Direction.DOWN);
+        Move.move(field, snake);
         Assert.assertFalse(snake.getIsAlive());
     }
 
     @Test
-    public void moveTest(){
-        ArrayList<SnakePart> beforeMoveSnake = snake.getSnake();
-        snake.move(Direction.UP);
-        beforeMoveSnake.remove(0);
-        beforeMoveSnake.add(beforeMoveSnake.size(),
-                new SnakePart(beforeMoveSnake.get(beforeMoveSnake.size()-1).position.add(Direction.UP.getShift())));
-        ArrayList<SnakePart> afterMoveSnake = snake.getSnake();
-        for (int i = 0; i<snake.getSnakeSize(); i++)
-            Assert.assertEquals(beforeMoveSnake.get(i), afterMoveSnake.get(i));
+    public void moveToSnakeTest() throws Exception {
+        snake.setCurrentDirection(Direction.LEFT);
+        Move.move(field, snake);
+        assertEquals(new Point(2, 1), snake.snake.getFirst().position);
+        assertEquals(new Point(5, 1), snake.snake.getLast().position);
+
     }
 
     @Test
-    public void moveToSelfTest(){
-        Move.move(field, snake, Direction.UP);
-        Move.move(field, snake, Direction.LEFT);
-        Move.move(field, snake, Direction.DOWN);
-        Assert.assertFalse(snake.getIsAlive());
+    public void moveToFruitTest() {
+        field.stateCell.put(new Point(5, 1), new Fruit());
+        snake.setCurrentDirection(Direction.RIGHT);
+        Move.move(field, snake);
+        Move.move(field, snake);
+        assertEquals(5, snake.snake.size());
+
     }
 }
